@@ -1,0 +1,8 @@
+kind: bazelize
+build-depends:
+- filename: bazelize/makelib1.bst
+- filename: bazelize/makelib2.bst
+- filename: bazelize/bazelize.bst
+config:
+  buildfile-dir: "/"
+  bazel-rule: "BST.BAZEL_NONE_RULE"
