@@ -11,6 +11,7 @@ plugins:
   - pip
   - quilt
   elements:
+  - bazelize
   - cmake
   - collect_integration
   - distutils
